fixed spacing on right side

--- a/sass/components/goals.scss
+++ b/sass/components/goals.scss
@@ -1,4 +1,7 @@
 #goals {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 
 	#goals-left {
 		padding: 0px;
